
	- fixed hash calculation in C♯ version (Tiago Freitas Leal).

3.5  Fri May  1 02:28:42 CEST 2009
	- lzf_compress did sometimes write one octet past the given output
          buffer (analyzed and nice testcase by Salvatore Sanfilippo).

3.4  Tue Sep  2 06:45:00 CEST 2008
	- the fix from 3.3 introduced a compression bug, which is fixed in
          this release (which explains the mysterious prerelease...). Thanks
          once more to Clément Calmels.

3.3  Mon Aug 25 03:17:42 CEST 2008
	- lzf_compress could access memory after the given input buffer
          when outputting back references. reported with nice testcase
          by Clément Calmels.

3.2  Fri May  9 18:52:23 CEST 2008
	- include a workaround for failing POSIX and real-world compliance
          on 64 bit windows (microsoft claims to support POSIX, but is far
          from it). (bug found and analysed nicely by John Lilley).

3.1  Fri Nov 30 11:33:04 CET 2007
	- IMPORTANT BUGFIX: a too long final literal run would corrupt data
          in the encoder (this was introduced in 3.0 only, earlier versions
          are safe).

3.0  Tue Nov 13 22:13:09 CET 2007
	- switched to 2-clause bsd with "GPL v2 or any later version" option.
        - speed up compression by ~10-15% in common cases
          by some manual unrolling.
        - import some compiler tricks from JSON::XS, for further speed-ups.
        - tune hash functions depending on ULTRA_FAST or VERY_FAST settings.
        - for typical binary data (e.g. /bin/bash, memory dumps,
          canterbury corpus etc.), speed is now comparable to fastlz, but
          with better compression ratio. with ULTRA_FAST, it's typically
          3-15% faster than fastlz while still maintaining a similar ratio.
          (amd64 and core 2 duo, ymmv). thanks a lot for the competition :)
        - undo inline assembly in compressor, it is no longer helpful.
        - no changes to the decompressor.
        - use a HLOG of 16 by default now (formerly 15).
